# hope

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md
.github/workflows/: test.yml
src/: client.rs  main.rs  server.rs
src/cli/: env.rs  logging.rs  mod.rs  styles.rs
src/pianobar/: event.rs  eventcmd.rs  mod.rs
src/pianobar/event/: eventcmd.rs  info.rs
tests/fixtures/: songstart  stationfetchplaylist  usergetstations  userlogin
